# Clover

./: .gitignore  README.md  clover-ui.cmd  clover-ui.ps1  clover.cmd  clover.ps1  debug_ollama_payload.json  install-path.ps1  output.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scratch_graphify_no_tests.py  scratch_graphify_openclaude.py  scratch_graphify_organize.py  tsconfig.json
.clover/logs/: pipeline.jsonl
.example/initial_requeriments/: design.md  requirements.md  tasks.md
.obsidian/: workspace.json
apps/backend/: README.md  package.json  tsconfig.json
apps/ui/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/__tests__/: tauri-config.test.ts
apps/ui/src-tauri/src/: main.rs
config/: default.config.json  models.config.json
docs/: conventions.md  index.md  pipeline_architecture.md
docs/adr/: 002-robust-pipeline.md  README.md
graphify-out/: graph_clover.html
graphify-out/clover/: GRAPH_REPORT.md  README.md  graph.html  graph.json
graphify-out/obsidian/: .addEventListener().md  .all().md  .close().md  .close()_1.md  .close()_2.md  .constructor().md  .constructor()_1.md  .constructor()_10.md  .constructor()_11.md  .constructor()_12.md  .constructor()_13.md  .constructor()_14.md  .constructor()_15.md  .constructor()_16.md  .constructor()_17.md  .constructor()_18.md  .constructor()_2.md  .constructor()_3.md  .constructor()_4.md  .exec().md  (+497 more)
scripts/: health-check.sh  start-openclaude.sh
shared/: package.json  tsconfig.json
(+13675 files in other folders)
